@@ -1,3 +1,12 @@
+2005-08-22  Philippe Gerum  <rpm@xenomai.org>
+
+	* skins/rtdm: Merge RTDM patch level #10.
+
+2005-08-22  Dmitry Adamushko  <dmitry.adamushko@datacon.at>
+
+	* skins/rtdm/proc (proc_read_open_fildes): Don't uselessly copy
+	the fildes struct while iterating.
+
 2005-08-21  Philippe Gerum  <rpm@xenomai.org>
 
 	* configure.in: Display kernel EXTRAVERSION.
